// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`appointment-tile AppointmentTile should match snapshot 1`] = `
<Fragment>
  <Component
    footerItems={
      Array [
        <React.Fragment>
          <Unknown
            className="is-info"
            disabled={false}
            fullWidth={false}
            loading={false}
            onClick={[Function]}
            type="submit"
          >
            Details
          </Unknown>
          <Unknown
            className="is-info"
            disabled={false}
            fullWidth={false}
            loading={false}
            onClick={[Function]}
            type="submit"
          >
            Directions
          </Unknown>
        </React.Fragment>,
      ]
    }
    heading="56 High Street"
    hightlight={false}
    key="NEP1600290"
  >
    <Component
      items={
        Array [
          Object {
            "icon": <FaAddressCard
              className="icon-list-icon"
            />,
            "text": "The Stables Old Haversham Milton Keynes MK19 7DZ",
          },
          Object {
            "icon": <FaStreetView
              className="icon-list-icon"
            />,
            "text": "Viewing",
          },
          Object {
            "icon": <FaClock
              className="icon-list-icon"
            />,
            "text": "Appointment cancelled",
          },
        ]
      }
    />
  </Component>
  <Memo()
    appointment={
      Object {
        "_eTag": "\\"CB9E584CE62E60C463C142EDCB433608\\"",
        "appointmentType": Object {
          "id": "VW",
          "value": "Viewing",
        },
        "cancelled": true,
        "created": "2019-05-08T17:07:39",
        "end": "2019-05-11T18:00:00",
        "id": "NEP1600290",
        "modified": "2019-05-09T09:18:06",
        "negotiatorIds": Array [
          "LJW",
          "LXJ",
          "LSB",
          "JCW",
        ],
        "negotiators": Array [
          Object {
            "__typename": "NegotiatorModel",
            "_eTag": "\\"CB9E584CE62E60C463C142EDCB433608\\"",
            "_embedded": Object {},
            "_links": Object {
              "office": Object {
                "href": "/offices/ALB",
              },
              "self": Object {
                "href": "/negotiators/LJW",
              },
            },
            "active": true,
            "created": "2014-11-10T15:24:39Z",
            "email": "emilie.boyd@reapitestates.net",
            "id": "LJW",
            "jobTitle": "",
            "metadata": Object {},
            "mobilePhone": "",
            "modified": "2020-07-07T08:14:31Z",
            "name": "Liam Jowett",
            "officeId": "ALB",
            "workPhone": "",
          },
          Object {
            "__typename": "NegotiatorModel",
            "_eTag": "\\"85F585A47F82909C139CAE0CDF76BD29\\"",
            "_embedded": Object {},
            "_links": Object {
              "office": Object {
                "href": "/offices/ALB",
              },
              "self": Object {
                "href": "/negotiators/LXJ",
              },
            },
            "active": true,
            "created": "2013-01-15T13:49:55Z",
            "email": "fletcher.barr@reapitestates.net",
            "id": "LXJ",
            "jobTitle": "",
            "metadata": Object {},
            "mobilePhone": "",
            "modified": "2016-10-17T07:47:53Z",
            "name": "Fletcher Barr",
            "officeId": "ALB",
            "workPhone": "",
          },
          Object {
            "__typename": "NegotiatorModel",
            "_eTag": "\\"D03398DFF51B9876BD04C925F52A6A04\\"",
            "_embedded": Object {},
            "_links": Object {
              "office": Object {
                "href": "/offices/ALB",
              },
              "self": Object {
                "href": "/negotiators/LSB",
              },
            },
            "active": true,
            "created": "2015-01-11T15:32:15Z",
            "email": "killian.allen@reapitestates.net",
            "id": "LSB",
            "jobTitle": "",
            "metadata": Object {},
            "mobilePhone": "",
            "modified": "2016-09-16T10:23:16Z",
            "name": "Killian Allen",
            "officeId": "ALB",
            "workPhone": "",
          },
          Object {
            "__typename": "NegotiatorModel",
            "_eTag": "\\"CB56729ECEF1690220F7C041B9A55125\\"",
            "_embedded": Object {},
            "_links": Object {
              "office": Object {
                "href": "/offices/ALB",
              },
              "self": Object {
                "href": "/negotiators/JCW",
              },
            },
            "active": true,
            "created": "2011-12-27T15:08:47Z",
            "email": "mara.grieve@reapitestates.net",
            "id": "JCW",
            "jobTitle": "",
            "metadata": Object {},
            "mobilePhone": "",
            "modified": "2016-09-21T15:54:30Z",
            "name": "Mara Grieve",
            "officeId": "ALB",
            "workPhone": "",
          },
        ],
        "officeIds": Array [
          "ALB",
        ],
        "offices": Array [
          Object {
            "__typename": "OfficeModel",
            "_eTag": "\\"9B4650E205A1B4DDB0E4A3CB98F4435F\\"",
            "_embedded": Object {},
            "_links": Object {
              "negotiators": Object {
                "href": "/negotiators/?officeId=ALB",
              },
              "self": Object {
                "href": "/offices/ALB",
              },
            },
            "address": Object {
              "__typename": "OfficeModelAddress",
              "buildingName": "",
              "buildingNumber": "",
              "countryId": "",
              "line1": "Exchange Street",
              "line2": "Aylesbury",
              "line3": "",
              "line4": "",
              "postcode": "HP19 9QL",
            },
            "created": "2011-12-26T17:55:46Z",
            "email": "salesa@hughmason.co.uk",
            "id": "ALB",
            "manager": "Gabriela Broadfoot",
            "metadata": Object {},
            "modified": "2020-02-14T16:03:23Z",
            "name": "Stoke Mandeville",
            "workPhone": "123456",
          },
        ],
        "organiserId": "BED160186",
        "property": Object {
          "address": Object {
            "buildingName": "",
            "buildingNumber": "56",
            "geolocation": Object {
              "latitude": 52.079532,
              "longitude": -0.790871,
            },
            "line1": "High Street",
            "line2": "The Stables",
            "line3": "Old Haversham",
            "line4": "Milton Keynes",
            "postcode": "MK19 7DZ",
          },
        },
        "recurring": false,
        "start": "2019-05-11T17:30:00",
        "typeId": "VW",
      }
    }
    onClose={[Function]}
    title={
      <React.Fragment>
        <Unknown>
          56 High Street
        </Unknown>
        <Unknown
          className="mb-0"
        >
          Viewing
        </Unknown>
      </React.Fragment>
    }
    visible={false}
  />
</Fragment>
`;

exports[`appointment-tile renderFooterItems should match snapshot 1`] = `
<div>
  <Component
    className="is-info"
    disabled={false}
    fullWidth={false}
    key="viewDetails"
    loading={false}
    onClick={[Function]}
    type="submit"
  >
    Details
  </Component>
  <Component
    className="is-info"
    disabled={false}
    fullWidth={false}
    key="viewDirection"
    loading={false}
    onClick={[Function]}
    type="submit"
  >
    Directions
  </Component>
</div>
`;

exports[`appointment-tile renderIconItems should match snapshot 1`] = `
<div>
  <Component />
  <Component />
  <Component />
</div>
`;

exports[`appointment-tile renderModalTitle should match snapshot 1`] = `
<div>
  <Component>
    mockHeading
  </Component>
  <Component
    className="mb-0"
  >
    Viewing
  </Component>
</div>
`;

exports[`appointment-tile renderModalTitle should match snapshot 2`] = `
<div>
  <Component
    className="mb-0"
  >
    Viewing
  </Component>
</div>
`;

exports[`appointment-tile renderModalTitle should match snapshot 3`] = `
<div>
  <Component>
    mock heading
  </Component>
</div>
`;

exports[`appointment-tile renderModalTitle should match snapshot 4`] = `<div />`;
